--- a/medApp/public/basic_layout_login.css
+++ b/medApp/public/basic_layout_login.css
@@ -119,7 +119,7 @@ header
 	height: 250px;
 }
 
-#button_2
+#faq_btn
 {
 	position: absolute;
 	right: 25%;
@@ -127,7 +127,7 @@ header
 	height: 250px;
 }
 
-#button_3
+#record_btn
 {
 	position: absolute;
 	left: 25%;
@@ -136,7 +136,7 @@ header
 	top: 375px;
 }
 
-#button_4
+#history_btn
 {
 	position: absolute;
 	right: 25%;
